welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: ';' expected but double literal found.
	S.0 = T.(H-1)
         ^Array1:15: error: identifier expected but '(' found.
		S.(k+1)=T.(k)
                  ^Array1:15: error: identifier expected but '(' found.
		S.(k+1)=T.(k)
                          ^Array1:32: error: identifier expected but '(' found.
				setColorBrosse(S.(d))
                                                 ^